Build a Multi-step Transaction component

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -10,6 +10,7 @@ $blue500: #3b82f6;
 $blue600: #2563eb;
 $blue700: #1d4ed8;
 $blue800: #1e40af;
+$blue900: #1e3a8a;
 // green
 $green50: #dcfce7;
 $green100: #dcfce7;
@@ -55,7 +56,7 @@ $grey800: #292524;
 $orange600: #ea580c;
 $orange800: #9a3412;
 // violet
-$violet400: #A78BFA;
+$violet400: #a78bfa;
 
 $shadesOfGrey: (
   "grey50": $grey50,
